# Project_API

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  development.Dockerfile  docker-compose.yml  entrypoint.sh  init-test.sql  nginx.conf  orval.config.js
.cargo/: config.toml
.github/workflows/: cicd.yml
examples/: generate_openapi.rs
src/: auth_middleware.rs  lib.rs  main.rs  swagger.rs
src/database/: mod.rs
src/database/project/: mod.rs
src/database/project/create/: query.rs  view.rs
src/database/project/delete/: query.rs  view.rs
src/database/project/get_projects/: query.rs  view.rs
src/database/project/update_status/: query.rs  view.rs
src/database/tasks/: mod.rs
src/database/tasks/create_task/: query.rs  view.rs
src/database/tasks/delete_task/: query.rs  view.rs
src/database/tasks/fields/: mod.rs
src/database/tasks/get_project_tasks/: query.rs  view.rs
src/database/tasks/patch_task/: query.rs  view.rs
src/database/users/add_user_to_project/: query.rs  view.rs
src/endpoints/: health.rs  hello.rs  mod.rs  swagger.rs
src/endpoints/v1/: doc.rs  mod.rs
tests/: integration_test.rs
tests/common/: get_pool.rs  mod.rs
tests/queries/: mod.rs
tests/queries/fields/: add_field_to_task.rs  change_value.rs  get_fields.rs  mod.rs
tests/queries/project/: create.rs  delete.rs  get_projects.rs  update_status.rs
tests/queries/tasks/: create_task.rs  delete_task.rs  get_project_tasks.rs  mod.rs  patch_task.rs
tests/queries/users/: add_user_to_project.rs  get_project_users.rs  mod.rs  remove_user_from_project.rs
(+46 files in other folders)
