[package]
name = "project_api" #change api name
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mairie360_api_lib = "0.3.3"
futures-util = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["full"] }
utoipa = { version = "4", features = ["actix_extras", "yaml"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
async-trait = "0.1.89"
tokio-postgres = "0.7.16"

[dev-dependencies]
serial_test = "3.3.1"
once_cell = "1.21.3"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3